# QCA OpenSSL

SET(QCA_OPENSSL_SOURCES qca-openssl.cpp)

MY_AUTOMOC( QCA_OPENSSL_SOURCES )

ADD_LIBRARY(qca-openssl SHARED ${QCA_OPENSSL_SOURCES})
INCLUDE_DIRECTORIES(${OPENSSL_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(qca-openssl ${QT_QTCORE_LIBRARY})
TARGET_LINK_LIBRARIES(qca-openssl qca)
TARGET_LINK_LIBRARIES(qca-openssl ${OPENSSL_LIBRARIES})

IF (WIN32)
  ADD_DEFINITIONS(-DOSSL_097)
  TARGET_LINK_LIBRARIES(qca-openssl gdi32)
  TARGET_LINK_LIBRARIES(qca-openssl wsock32)
  TARGET_LINK_LIBRARIES(qca-openssl eay32)
ENDIF (WIN32)

INSTALL(TARGETS qca-openssl LIBRARY DESTINATION ${qca_PLUGINSDIR})
