# qca-pkcs11

SET(QCA_PKCS11_SOURCES qca-pkcs11.cpp)
MY_AUTOMOC( QCA_PKCS11_SOURCES )

ADD_LIBRARY(qca-pkcs11 MODULE ${QCA_PKCS11_SOURCES})

ADD_DEFINITIONS(${PKCS11H_DEFINITIONS})
INCLUDE_DIRECTORIES(${PKCS11H_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(qca-pkcs11 ${QT_QTCORE_LIBRARY})
TARGET_LINK_LIBRARIES(qca-pkcs11 ${QCA_LIB_NAME})
TARGET_LINK_LIBRARIES(qca-pkcs11 ${PKCS11H_LIBRARIES})
IF (WIN32)
  TARGET_LINK_LIBRARIES(qca-pkcs11 pkcs11-helper.dll)
ENDIF (WIN32)

INSTALL(TARGETS qca-pkcs11
        LIBRARY DESTINATION "${QCA_PLUGINS_INSTALL_DIR}"
        ARCHIVE DESTINATION "${QCA_PLUGINS_INSTALL_DIR}"
        RUNTIME DESTINATION "${QCA_PLUGINS_INSTALL_DIR}"
)
